# drake-ur-driver

./: .gitignore  .gitmodules  MODULE.bazel  README.md
drake-ur-driver/: BUILD.bazel  ur_driver.cc
drake-ur-driver/resources/: rtde_output_recipe.txt  ur10.urdf
lcmtypes/: BUILD.bazel  lcmt_ur_command.lcm  lcmt_ur_status.lcm
models/: BUILD.bazel  ur10.urdf
models/ur10/visual/: base.gltf  forearm.gltf  shoulder.gltf  upperarm.gltf  wrist1.gltf  wrist2.gltf  wrist3.gltf
tests/: BUILD.bazel  test_driver.py
tools/workspace/Universal_Robots_Client_Library/: package.BUILD.bazel  repository.bzl
ur-driver/: BUILD.bazel
