package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "ur_driver",
    srcs = [
        "ur_driver.cc",
    ],
    deps = [
        "//lcmtypes:lcmt_ur",
        "@drake//common:common",
        "@drake//multibody/plant",
        "@drake//multibody/parsing:parsing",
        "@gflags",
        "@lcm",
        "@liburclient",
    ],
    data = [
        "//models:ur_models",
    ],
)